--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/572b4e8f6d.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <!-- Custom Css Link -->
@@ -124,11 +125,12 @@
 
   </header>
   <!-- _____________________header end___________________________________________ -->
-  <main>
+  <main class="container">
+
     <!-- _____________________Courses Section Start___________________________________________ -->
     <section class="courses-section container my-4">
       <div class="d-flex justify-content-center">
-        <div class="text-center w-50 ">
+        <div class="text-center w-50 pt-4">
           <h2 class=" fw-bold">Discover Our Popular Courses</h2>
           <p class="text-muted ">Free online courses from the world's top universities and companies.Take courses from
             the world's best instructors and universities.</p>
@@ -159,7 +161,7 @@
 
         <!-- __________Javascript Basic to advanced  Start_______________ -->
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="row g-3  ">
               <div class="col-md-5 col-lg-5 ">
                 <img src="./images/course/course-2.png"
@@ -181,7 +183,7 @@
         <!-- __________Fullstack Web Development  Start_______________ -->
 
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="row g-3 ">
               <div class="col-md-5 col-lg-5 ">
                 <img src="./images/course/course-3.png"
@@ -190,7 +192,8 @@
               <div class="col-md-7 col-lg-7">
                 <div class="card-body ">
                   <h5 class="text-secondary mt-3 fw-bold">Fullstack Web Development</h5>
-                  <p class=" text-muted card-text ">Build Complete Web and Hybrid Mobile Solutions. Master front-end web, hybrid mobile app and server-side development </p>
+                  <p class=" text-muted card-text ">Build Complete Web and Hybrid Mobile Solutions. Master front-end
+                    web, hybrid mobile app and server-side development </p>
                   <p class="card-text h5 fw-bold"><small class="text-primary">Price : 20$</small></h6>
                 </div>
               </div>
@@ -201,7 +204,7 @@
 
         <!-- __________Digital Marketing  Start_______________ -->
         <div class="col d-none d-sm-none d-lg-flex d-md-none">
-          <div class="card">
+          <div class="card h-100">
             <div class="row g-3 ">
               <div class="col-md-5 col-lg-5">
                 <img src="./images/course/course-4.png"
@@ -210,8 +213,8 @@
               <div class="col-md-7 col-lg-7  ">
                 <div class="card-body ">
                   <h5 class="text-secondary mt-3 fw-bold">Digital Marketing</h5>
-                  <p class=" text-muted card-text ">This is your path to a career in digital marketing. In this program,
-                    you’ll learn in-demand skills </p>
+                  <p class=" text-muted card-text ">Drive Customer Behavior Online. A six-course overview of the latest
+                    digital marketing skills, taught by industry experts.Understand frameworks and approaches. </p>
                   <p class="card-text h5 fw-bold"><small class="text-primary ">Price : 20$</small></h6>
                 </div>
               </div>
@@ -221,17 +224,16 @@
         <!-- __________Digital Marketing End_______________ -->
         <!-- __________Photography Basic Rules Start_______________ -->
         <div class="col  d-none d-sm-none d-lg-flex d-md-none">
-          <div class="card">
+          <div class="card h-100">
             <div class="row g-3 ">
-              <div class="col-md-5 col-lg-5">
-                <img src="./images/course/course-5.png"
-                  class=" img-fluid w-100 h-100 rounded-start embed-responsive-item" alt="...">
+              <div class="col-md-5 col-lg-5 embed-responsive-ite-sm-">
+                <img src="./images/course/course-5.png" class=" img-fluid w-100 h-100 rounded-start  " alt="...">
               </div>
               <div class="col-md-7 col-lg-7  ">
                 <div class="card-body ">
                   <h5 class="text-secondary mt-3 fw-bold">Photography Basic Rules</h5>
-                  <p class=" text-muted card-text ">This course is part of the Photography Basics and Beyond: From
-                    Smartphone to DSLR Specialization</p>
+                  <p class=" text-muted card-text ">This course is part of the Photography Basics and Beyond.Here you
+                    will gain knowledge related to content in photography.</p>
                   <p class="card-text h5 fw-bold"><small class="text-primary">Price : 20$</small></h6>
                 </div>
               </div>
@@ -240,26 +242,26 @@
         </div>
         <!-- __________Photography Basic Rules End_______________ -->
 
-          <!-- __________Motion Graphics Course Start_______________ -->
+        <!-- __________Motion Graphics Course Start_______________ -->
         <div class="col  d-none d-sm-none d-lg-flex d-md-none">
-          <div class="card">
+          <div class="card h-100">
             <div class="row g-3">
-              <div class="col-md-5 col-lg-5">
+              <div class="col-md-5 col-lg-5 pb-0">
                 <img src="./images/course/course-6.png"
-                  class=" img-fluid w-100 h-100 rounded-start embed-responsive-item" alt="...">
+                  class=" img-fluid w-100 h-100 rounded-start  embed-responsive-item" alt="...">
               </div>
               <div class="col-md-7 col-lg-7  ">
                 <div class="card-body ">
                   <h5 class="text-secondary mt-3 fw-bold">Motion Graphics</h5>
                   <p class=" text-muted card-text ">This course will help you to create Motion graphics for websites
-                    using Adobe Illustrator CC. </p>
+                    using Adobe Illustrator CC.By the tasks, you will be able to design your motion graphics.</p>
                   <p class="card-text h5 fw-bold"><small class="text-primary">Price : 20$</small></h6>
                 </div>
               </div>
             </div>
           </div>
         </div>
-            <!-- __________Motion Graphics Course end_______________ -->
+        <!-- __________Motion Graphics Course end_______________ -->
 
       </div>
       <div class="d-lg-flex justify-content-center d-none d-sm-none d-md-none">
@@ -268,9 +270,69 @@
       <div class="d-md-flex justify-content-center d-flex d-sm-flex d-lg-none">
         <button type="button" class="btn btn-primary  btn-sm text-white  px-4 py-2">View All</button>
       </div>
-     
+    </section>
+    <!-- _____________________Courses Section End___________________________________________ -->
+
+    <!-- _________________Ready To Join Section Start________________ -->
+    <section class=" bg-primary  rounded-2 px-5 py-5 my-5">
+      <div class="row container px-5 py-2 ">
+        <div class="col-lg-8 text-center ">
+          <h1 class="text-white display-4 fw-bold ">
+            Ready to join?.
+          </h1>
+          <p class="text-white ">A world class education for anyone, anywhere. 100% free.</p>
+
+          <p class="text-white ">Join Digi Learn to get personalized help with what you’re studying or to learn
+            something completely new. We’ll save all of your progress.</p>
+
+        </div>
+        <div class="col-lg-4 d-flex justify-content-center align-items-center">
+          <!-- __________Modal Added__________ -->
+          <button class="btn btn-light text-primary px-3 fw-bold" data-bs-target="#signUp-modal"
+            data-bs-toggle="modal">Register Now</button>
+          <div class="modal fade" id="signUp-modal">
+            <div class="modal-dialog modal-dialog-centered">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3 class=" text-primary">Registration</h3>
+                  <button type="button" class="close" data-bs-dismiss="modal"> &times; </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label><i class="fa fa-user fa-2x"></i>Username:</label>
+                      <input type="text" name="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                      <label><i class="fa-solid fa-lock fa-2x"></i>Password:</label>
+                      <input type="password" name="" class="form-control">
+                    </div>
+                    <div class="form-group">
+                      <label><i class="fa-solid fa-envelope fa-2x"></i>Email:</label>
+                      <input type="email" name="" class="form-control">
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer justify-content-center">
+                  <button class="btn btn-danger " data-bs-dismiss="modal">
+                    Sign Up
+                  </button>
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+            <!-- __________Modal Added__________ -->
+        </div>
+      </div>
+
+      </div>
 
     </section>
+    <!-- _________________Ready To Join Section End________________ -->
+
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
