Added Frequently Asked Questions Section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- ________Font-awsome-link_____________ -->
   <script src="https://kit.fontawesome.com/572b4e8f6d.js" crossorigin="anonymous"></script>
+  <!-- ________Bootstrap-link_____________ -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <!-- Custom Css Link -->
@@ -51,7 +53,7 @@
             </li>
           </ul>
 
-          <button class="btn btn-outline-primary fw-bold me-lg-5 d-md-none  d-lg-block" type="submit">Register</button>
+          <button class="btn btn-outline-primary fw-bold me-lg-5 d-md-none ms-auto d-lg-block" type="submit">Register</button>
 
         </div>
 
@@ -265,10 +267,10 @@
 
       </div>
       <div class="d-lg-flex justify-content-center d-none d-sm-none d-md-none">
-        <button type="button" class="btn btn-primary  btn-sm text-white  px-4 py-2">See More Courses</button>
+        <button type="button" class="btn btn-primary  btn-sm text-white  mb-2 px-4 py-2">See More Courses</button>
       </div>
       <div class="d-md-flex justify-content-center d-flex d-sm-flex d-lg-none">
-        <button type="button" class="btn btn-primary  btn-sm text-white  px-4 py-2">View All</button>
+        <button type="button" class="btn btn-primary  btn-sm text-white  px-4 py-2 mb-2">View All</button>
       </div>
     </section>
     <!-- _____________________Courses Section End___________________________________________ -->
@@ -277,7 +279,7 @@
     <section class=" bg-primary  rounded-2 px-5 py-5 my-5">
       <div class="row container px-5 py-2 ">
         <div class="col-lg-8 text-center ">
-          <h1 class="text-white display-4 fw-bold ">
+          <h1 class="text-white display-5 fw-bold ">
             Ready to join?.
           </h1>
           <p class="text-white ">A world class education for anyone, anywhere. 100% free.</p>
@@ -324,7 +326,7 @@
             </div>
 
           </div>
-            <!-- __________Modal Added__________ -->
+          <!-- __________Modal Added__________ -->
         </div>
       </div>
 
@@ -332,6 +334,102 @@
 
     </section>
     <!-- _________________Ready To Join Section End________________ -->
+
+    <!-- ________________Frequently Asked Questions Section Start______________________ -->
+    <section class="container my-4">
+      <div class=" d-flex justify-content-center align-items-center">
+        <div class="text-center w-50 pt-4">
+          <h2 class=" fw-bold">Frequently Asked Questions</h2>
+          <p class="text-muted ">The following list provides answers to the most common questions asked by instructors
+            regarding digital learning</p>
+        </div>
+
+      </div>
+
+      <div class="mt-4 d-flex justify-content-center">
+        <div class="accordion w-75" id="accordionPanelsStayOpenExample">
+          <div class="accordion-item ">
+            <h2 class=" accordion-header" id="panelsStayOpen-headingOne">
+              <button class="accordion-button fw-bold " type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                aria-controls="panelsStayOpen-collapseOne">
+                What are the differences between flex box and grid?
+              </button>
+            </h2>
+
+            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+              aria-labelledby="panelsStayOpen-headingOne">
+              <div class="accordion-body text-muted">
+                <strong> The basic difference between CSS Grid Layout and CSS Flexbox Layout</strong> is that flexbox
+                was designed for layout in one dimension - either a row or a column. Grid was designed for
+                two-dimensional layout - rows, and columns at the same time.Major Uniqueness between Flexbox and Grids
+                is that the former works on content while the latter is based on the layout.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+              <button class="accordion-button collapsed fw-bold text-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseTwo">
+                What are the differences between Bootstrap and Tailwind CSS?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingTwo">
+              <div class="accordion-body text-muted">
+                <strong> The basic difference between Bootstrap and Tailwind CSS
+
+                </strong> is that Tailwind offers predesigned widgets to build a site from scratch with fast UI
+                development and Bootstrap comes with a set of pre-styled responsive, mobile-first components that
+                possess a definite UI kit.Tailwind CSS uses a set of utility classes to create a neat UI with more
+                flexibility and uniqueness.On the other hand,Sites created using Bootstrap follow the generic pattern
+                that makes them look identical.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+              <button class="accordion-button collapsed  fw-bold text-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseThree">
+                What is CSS Box Model?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingThree">
+              <div class="accordion-body text-muted">
+                <strong>The CSS box model</strong> is a container that contains multiple properties including borders,
+                margin, padding, and the content itself. It is used to create the design and layout of web pages. It can
+                be used as a toolkit for customizing the layout of different elements.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+              <button class="accordion-button collapsed  fw-bold text-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                aria-controls="panelsStayOpen-collapseFour">
+                What are Semantic Elements?
+              </button>
+            </h2>
+            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+              aria-labelledby="panelsStayOpen-headingFour">
+              <div class="accordion-body text-muted">
+                <strong> Semantic HTML elements are those that clearly describe their meaning in a human- and
+                  machine-readable way.</strong> Elements such as &ltheader&gt, &ltfooter&gtand &ltarticle&gt are all
+                considered semantic because they accurately describe the purpose of the element and the type of content
+                that is inside them.Some semantic elements added in HTML5 are:&ltarticle&gt,&ltaside&gt,
+                &ltdetails&gt,&ltnav&gt,&ltheader&gt,&ltfigcaption&gt,&ltfigure&gt,&ltfooter&gt
+                ,&ltmain&gt,&ltmark&gt,&ltsection&gt,&ltsummary&gt,&lttime&gt.
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- ________________Frequently Asked Questions Section End______________________ -->
 
   </main>
 
