--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             </li>
           </ul>
 
-          <button class="btn btn-outline-primary fw-bold me-lg-5 d-md-none ms-auto d-lg-block" type="submit">Register</button>
+          <button class="btn btn-outline-primary fw-bold me-lg-5 d-md-none ms-auto d-lg-block"
+            type="submit">Register</button>
 
         </div>
 
@@ -431,6 +432,39 @@
     </section>
     <!-- ________________Frequently Asked Questions Section End______________________ -->
 
+    <!-- ________________Trusted by over 800+ companies Section Start______________________ -->
+    <section class="container my-4  d-none d-sm-none d-md-none d-lg-block">
+      <div class=" d-flex justify-content-center align-items-center">
+        <div class="text-center w-50 pt-4">
+          <h2 class=" fw-bold">Trusted by over 800+ companies</h2>
+        </div>
+      </div>
+      <div class="row my-5  ">
+    
+        <div class="col-md-2   ">
+          <img class="img-fluid" src="./images/company/company-1.png" alt="" />
+        </div>
+        <div class="col-md-2">
+          <img class="img-fluid" src="./images/company/company-2.png" alt="" />
+        </div>
+        <div class="col-md-2">
+          <img class="img-fluid" src="./images/company/company-3.png" alt="" />
+        </div>
+        <div class="col-md-2">
+          <img class="img-fluid" src="./images/company/company-4.png" alt="" />
+        </div>
+        <div class="col-md-2">
+          <img class="img-fluid" src="./images/company/company-5.png" alt="" />
+        </div>
+        <div class="col-md-2">
+          <img class="img-fluid" src="./images/company/company-6.png" alt="" />
+        </div>
+  
+      </div>
+
+    </section>
+    <!-- ________________Trusted by over 800+ companies Section End______________________ -->
+   
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
