External changes added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- _________________________ Digi Learn Navbar Start______________________ -->
     <nav class="navbar navbar-expand-lg ">
       <div class="container mt-2">
-        <a class="navbar-brand fs-2 fw-bold text-dark" href="#">Digi Learn</a>
+        <a class="navbar-brand display-6 fs-2 fw-bold text-dark" href="#">Digi Learn</a>
         <div class="d-none d-md-inline  ms-auto  d-lg-none d-sm-none  ">
           <button class="btn btn-outline-primary fw-bold me-4 " type="submit">Register</button>
         </div>
@@ -134,7 +134,7 @@
     <section class="courses-section container pt-5 pb-4">
       <div class="d-flex justify-content-center  ">
         <div class="text-center mt-4 mb-0 w-50  ">
-          <h2 class="fw-bold">Discover Our Popular Courses</h2>
+          <h2 class="display-6 fw-bold">Discover Our Popular Courses</h2>
           <p class="text-muted ">Free online courses from the world's top universities and companies.Take courses from
             the world's best instructors and universities.</p>
         </div>
@@ -395,7 +395,7 @@
     <section class="container pt-3 mb-5">
       <div class="d-flex  justify-content-md-start justify-content-center ">
         <div class="text-left mt-4 mb-0 w-50  ">
-          <h2 class="fw-bold">Meet Our Successfull Students</h2>
+          <h2 class="display-6 fw-bold">Meet Our Successfull Students</h2>
           <p class="text-muted mb-5">Your story is unique. That’s why we work closely with you to understand your particular interests, needs, and aspirations. Read on for stories of real students who know this first-hand, and get inspired to create your own student success story!</p>
         </div>
       </div>
@@ -439,15 +439,31 @@
             </div>
             
         </div>
+        <div class="d-md-none justify-content-center d-flex d-sm-flex d-lg-flex">
+          <button type="button" class=" mt-5 btn btn-primary  btn-sm text-white  px-4 py-2 mb-5">View All</button>
+        </div>
      
     </section>
     <!-- _________________Meet Our Successfull Students Section End____________________ -->
+
+    <!-- _________________Some Students Feedback Section Start___________________________ -->
+    <!-- <section class="container pt-3 mb-5">
+      <div class=" d-flex justify-content-center  align-items-center ">
+        <div class="text-center mt-4 w-50 pt-3">
+          <h2 class="display-6 fw-bold">Some Students Feedback</h2>
+          <p class="text-muted ">The following list provides answers to the most common questions asked by instructors
+            regarding digital learning</p>
+        </div>
+
+      </div>
+
+    </section> -->
 
     <!-- ________________Frequently Asked Questions Section Start______________________ -->
     <section class="container pt-3 mb-5">
       <div class=" d-flex justify-content-center  align-items-center ">
         <div class="text-center mt-4 w-50 pt-3">
-          <h2 class=" fw-bold">Frequently Asked Questions</h2>
+          <h2 class="display-6 fw-bold">Frequently Asked Questions</h2>
           <p class="text-muted ">The following list provides answers to the most common questions asked by instructors
             regarding digital learning</p>
         </div>
